@@ -236,7 +236,7 @@ class InterfaceZapierTriggers extends DolibarrTriggers
 			// case 'ORDER_SUPPLIER_REFUSE':
 			// case 'ORDER_SUPPLIER_CANCEL':
 			// case 'ORDER_SUPPLIER_SENTBYMAIL':
-			// case 'ORDER_SUPPLIER_DISPATCH':
+			// case 'ORDER_SUPPLIER_RECEIVE':
 			// case 'LINEORDER_SUPPLIER_DISPATCH':
 			// case 'LINEORDER_SUPPLIER_CREATE':
 			// case 'LINEORDER_SUPPLIER_UPDATE':
